# mike_av_stack_localization

./: .gitignore  README.md
launch/: mike_av_stack.launch
log/: latest_list
src/mike_av_stack/: CMakeLists.txt  package.xml  package2.xml
src/mike_av_stack/launch/: localization.launch
src/mike_av_stack/src/: c3-main.cpp  helper.h  icp.cpp  icp.h  icps.cpp  icps.h  localization.cpp  ndt.cpp  ndt.h  scan_matching.cpp  scan_matching.h
src/mike_av_stack/wiki/: SensorFusionDiagram.odg  sensor_fusion.md
src/mike_av_stack_localization/: CMakeLists  CMakeLists.txt  package.xml
src/mike_av_stack_localization/src/: helper.cpp  icp.cpp  icp.h  icps.cpp  icps.h  localization.cpp  ndt.cpp  ndt.h  scan_matching.cpp  scan_matching.h
wiki/: localization.md
